--- a/src/site.css
+++ b/src/site.css
@@ -7,7 +7,7 @@
 
 @import url('css/components/introduction.css');
 @import url('css/components/activities.css');
-@import url('css/components/contact.css');
+@import url('css/components/information.css');
 
 @import url('css/containers/body.css');
 @import url('css/containers/header.css');
