--- a/src/css/site/vars.css
+++ b/src/css/site/vars.css
@@ -13,6 +13,7 @@
     --swatch-color-brown: #b45f06;
     --swatch-color-green: #38761d;
     --swatch-color-orange: #e69138;
+    --swatch-color-purple: #674ea7;
 
     --font-family-text: 'Comfortaa', sans-serif;
 
