--- a/src/fragments/meta.html
+++ b/src/fragments/meta.html
@@ -2,20 +2,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="Content-Language" content="en" />
-<meta name="description" content="We specialize in building cost-efficient applications." />
+<meta name="description" content="We make your software development cost-efficient." />
 <meta name="author" content="Masking Technology" />
 <meta name="copyright" content="2024 Masking Technology" />
 <meta name="application-name" content="Masking Technology Website" />
 <meta name="format-detection" content="telephone=no">
 
 <meta property="og:site_name" content="Masking Technology">
-<meta property="og:title" content="Future-proofing software applications.">
-<meta property="og:description" content="We specialize in building cost-efficient applications.">
+<meta property="og:title" content="Cost-efficient software development.">
+<meta property="og:description" content="We make your software development cost-efficient.">
 <meta property="og:image" content="https://masking.tech/images/logo_shared.png">
 <meta property="og:url" content="https://masking.tech">
 <meta name="twitter:card" content="summary_large_image">
 
-<link rel="icon" type="image/png" href="images/icon.png" />
+<link rel="icon" type="image/png" href="/images/icon.png" />
 <link rel="stylesheet" href="/css/site.css">
 
 <script src="/js/site.js"></script>
