Added consultancy and training section

--- a/src/fragments/header.html
+++ b/src/fragments/header.html
@@ -5,8 +5,8 @@
         </a>
     </div>
     <div class="socials">
-        <a href="https://x.com/maskingtech" target="_blank" aria-label="Visit our X page">
-            <img src="/images/x.png" alt="X" />
+        <a href="https://bsky.app/profile/masking.tech" target="_blank" aria-label="Visit our Bluesky page">
+            <img src="/images/bluesky.png" alt="Bluesky" />
         </a>
         <a href="https://www.linkedin.com/company/maskingtechnology" target="_blank" aria-label="Visit our LinkedIn page">
             <img src="/images/linkedin.png" alt="LinkedIn" />
